# ai-drhp-capital-structure

./: .env.example  .gitignore  DESIGN.md  PROMPTS.md  README.md  pyproject.toml  task1_implementation_guide.md
data/: ground_truth.json
data/sh7_01_2019_mar/: Altered_MOA.md  Board_Meeting.md  EGM_Notice.md  SH7.md
data/sh7_02_2021_aug/: Altered_MOA.md  Board_Meeting.md  PAS3_Return_of_Allotment.md  SH7.md
data/sh7_03_2023_jul/: AGM_Notice.md  Altered_MOA.md  Board_Meeting.md  SH7.md
data/sh7_04_2025_jan/: Board_Meeting.md  EGM_Notice.md  SH7.md
scripts/: generate_dataset.py
src/drhp_agent/: __init__.py  __main__.py  classify.py  cli.py  extract.py  ingest.py  llm.py  reconcile.py  render.py  schemas.py
tests/: test_classify.py  test_extract.py  test_reconcile.py
