[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drhp-agent"
version = "0.1.0"
description = "AI agent that ingests regulatory filings (SH-7, PAS-3, etc.) and generates a traceable DRHP capital structure table."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pydantic>=2.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
drhp-agent = "drhp_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
